Rework to Buefy
Based on https://github.com/veloace/laravel-buefy-spa

Signed-off-by: Kristian Feldsam <feldsam@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "cretueusebiu/laravel-vue-spa",
-    "description": "A Laravel-Vue SPA starter project template.",
+    "name": "feldsam-inc/laravel-vue-spa",
+    "description": "A Laravel-Buefy SPA starter project template.",
     "keywords": ["spa", "laravel", "vue"],
     "license": "MIT",
     "type": "project",
